lume/LumeEngine/test/unittest/assets/test_data/image/ktx-test/ktx/invalid/header/size_3d_height_0.ktx
# This file was originally tracked by Git LFS but LFS tracking has been removed
version https://git-lfs.github.com/spec/v1
oid sha256:ba9067d2a89b44e329e99c95aa3d90996fbe5c74100574e90cbffa86d28d2497
size 324
